fix timestamp alignment

--- a/app/assets/stylesheets/components/gear_dropdown.scss
+++ b/app/assets/stylesheets/components/gear_dropdown.scss
@@ -3,12 +3,12 @@
 	top: 40px;
 	left: 0;
 	background-color: #fff;
-	border: 1px solid $light-gray;
+	border: 1px solid $light-grey;
 	border-radius: 3px;
 	padding: 10px;
 	width: 225px;
 	z-index: 1;
-	color: $dark-gray;
+	color: $dark-grey;
 	font-family: $sans-serif;
 	text-align: left;
 	box-shadow: -1px 4px 6px 1px rgba(0,0,0,0.09);
@@ -16,7 +16,7 @@
 }
 
 .gear-dropdown .user-settings  {
-	border-bottom: 1px solid $light-gray;
+	border-bottom: 1px solid $light-grey;
 }
 
 .gear-dropdown .user-settings li,
@@ -39,5 +39,5 @@
 }
 
 .gear-dropdown .user-settings li:hover {
-	background-color: $light-gray;
+	background-color: $light-grey;
 }
